# ChangeLog for x11-misc/spacefm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.21 2012/04/17 14:32:51 ssuominen Exp $

  17 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> -spacefm-0.7.1.ebuild,
  -spacefm-0.7.2.ebuild, -spacefm-0.7.3.ebuild, metadata.xml:
  old

  17 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> spacefm-0.7.4.ebuild,
  spacefm-0.7.5.ebuild, spacefm-9999.ebuild:
  Because upstream is now forcing sys-fs/udev we can assume SpaceFM is for
  Linux only and always enable INOTIFY support.

*spacefm-0.7.5 (17 Apr 2012)

  17 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> +spacefm-0.7.5.ebuild,
  spacefm-9999.ebuild, metadata.xml:
  Version bump by Julian Ospald.

*spacefm-9999 (10 Apr 2012)

  10 Apr 2012; Michael Weber <xmw@gentoo.org> +spacefm-9999.ebuild:
  Add liveVCS ebuild by Julian Ospald.

*spacefm-0.7.4 (03 Apr 2012)

  03 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> +spacefm-0.7.4.ebuild:
  Version bump by Julian Ospald.

*spacefm-0.7.3 (29 Mar 2012)

  29 Mar 2012; Michael Weber <xmw@gentoo.org> -spacefm-0.6.3.ebuild,
  +spacefm-0.7.3.ebuild:
  Version bump by Julian Ospald, remove old version

  27 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> spacefm-0.6.3.ebuild,
  spacefm-0.7.1.ebuild, spacefm-0.7.2.ebuild:
  Pin to SLOT="0" of sys-fs/udisks.

*spacefm-0.7.2 (05 Mar 2012)

  05 Mar 2012; Michael Weber <xmw@gentoo.org> +spacefm-0.7.2.ebuild:
  Version bump by Julian Ospald

*spacefm-0.7.1 (22 Feb 2012)

  22 Feb 2012; Mike Gilbert <floppym@gentoo.org> +spacefm-0.7.1.ebuild,
  -spacefm-0.7.0.ebuild:
  Version bump by request of Julian.

*spacefm-0.7.0 (14 Feb 2012)

  14 Feb 2012; Michael Weber <xmw@gentoo.org> +spacefm-0.7.0.ebuild:
  Version bump by Julian Ospald

*spacefm-0.6.3 (09 Feb 2012)

  09 Feb 2012; Michael Weber <xmw@gentoo.org> -spacefm-0.6.1.ebuild,
  -spacefm-0.6.2.ebuild, +spacefm-0.6.3.ebuild: