@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/spacefm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.21 2012/04/17 14:32:51 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.22 2012/04/21 21:35:05 xmw Exp $
+
+*spacefm-0.7.6 (21 Apr 2012)
+
+  21 Apr 2012; Michael Weber <xmw@gentoo.org> +spacefm-0.7.6.ebuild,
+  spacefm-9999.ebuild:
+  Version bump w/ changed udev handling by Julian Ospald
 
   17 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> -spacefm-0.7.1.ebuild,
   -spacefm-0.7.2.ebuild, -spacefm-0.7.3.ebuild, metadata.xml:
